# OpenFIDO

./: .clang-format  .clang-tidy  .gitignore  .sonarcloud.properties  BUILD.md  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  build.bat  build.ps1  build.sh  platformio.ini
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: auto-format.yml  auto-release.yml  benchmarks.yml  build.yml  ci.yml  cmake-build.yml  code-quality.yml  container.yml  coverage.yml  pages-deploy.yml  pr-comment.yml  scheduled.yml  security-scan.yml
.kiro/specs/ble-transport/: design.md  requirements.md  tasks.md
.kiro/specs/fix-build-system/: CI_VERIFICATION.md  design.md  requirements.md  tasks.md
cmake/: FindMbedTLS.cmake  nrf52-toolchain.cmake
docs/: ARCHITECTURE.md  AUTOMATION.md  BUILDING.md  BUILD_FIX.md  CI.md  CONTRIBUTING.md  PRODUCTION.md  PROTOCOLS.md  REFACTORING.md  SECURITY.md  TESTING.md  storage_additions.txt
docs/diagrams/: architecture.mmd
scripts/: flash.py  validate_build.py
src/: config.h  main.c
src/ble/: ble_fido_service.c  ble_fido_service.h  ble_fragment.c  ble_fragment.h  ble_transport.c  ble_transport.h
src/common/: types.h
src/crypto/: crypto.c  crypto.h  ed25519_stub.c
src/fido2/: cbor.c  cbor.h  ctap2.c  ctap2.h  ctap2_commands.c  ctap2_config.c  ctap2_credential_mgmt.c  ctap2_large_blobs.c  permissions.c  permissions.h  u2f.c  u2f.h
src/fido2/commands/: ctap2_commands.c
src/fido2/core/: cbor.c  ctap2.c  ctap2.h  u2f.h
src/fido2/extensions/: ctap2_config.c  ctap2_large_blobs.c
src/hal/: hal.h  hal_ble.h  hal_ble_stub.c
src/hal/esp32/: hal_esp32.c  secure_boot.c
src/hal/nrf52/: hal_ble_nrf52.c  hal_nrf52.c
src/hal/rp2350/: secure_boot.c
src/hal/stm32/: hal_stm32.c
src/oath/: challenge_response.c  challenge_response.h  oath.c  oath.h  yubikey_otp.c  yubikey_otp.h
src/openpgp/: openpgp.c  openpgp.h
src/piv/: piv.c  piv.h
src/smartcard/: smartcard.h
src/storage/: storage.c  storage.h
src/transport/: transport.c  transport.h
src/usb/: usb_ccid.c  usb_ccid.h  usb_hid.c  usb_hid.h  usb_keyboard.c  usb_keyboard.h  ykman.c  ykman.h
src/utils/: buffer.c  buffer.h  led_patterns.c  led_patterns.h  logger.c  logger.h  rescue.c  rescue.h
tests/: CMakeLists.txt  mock_hal.c  test_build_validation.py  test_cbor.c  test_cmake_error_handling.py  test_crypto.c  test_ctap2.c  test_extensions.c  test_led_patterns.c  test_u2f.c
web/: app.js  index.html  style.css
